--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -250,3 +250,21 @@ body {
         text-align: center; /* Align text to the center */
       }
   }
+
+.cart-icon-container {
+    position: relative;
+    display: inline-block;
+}
+
+.cart-count {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 8px;
+    font-size: 14px;
+    min-width: 20px;
+    text-align: center;
+}
