--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -258,8 +258,8 @@ body {
 
 .cart-count {
     position: absolute;
-    top: -10px;
-    right: -10px;
+    bottom: 0;         /* Change from top to bottom */
+    left: -10px;      /* Change from right to left */
     background-color: red;
     color: white;
     border-radius: 50%;
@@ -267,4 +267,5 @@ body {
     font-size: 14px;
     min-width: 20px;
     text-align: center;
+    z-index: 1;       /* Add this to ensure it's above other elements */
 }
